monitoring/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: uptime-kuma
spec: {}
status: {}
