monitoring/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
  name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1.23.16
          name: uptime-kuma
          ports:
            - containerPort: 3001
              name: http
          resources: {}
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-data
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-data-pvc
status: {}
