monitoring/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - http:
        paths:
          - path: /uptime
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  name: http
